[package]
name = "pomelo-backend"
version = "0.1.0"
authors = ["Jack Valinsky <jvalinsk@u.rochester.edu>"
          ,"Stefan Aleksic <stefan@stefanaleksic.com>"]

[dependencies]
rustc-serialize = "0.3.19"
iron = "0.5.1"
serde = "0.9.1"
mount = "0.3.0"
router = "0.5.1"

[dependencies.juniper]
version = "0.7.0"
features = ["iron-handlers", "expose-test-schema"]
